<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_add_attendee_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_attendee_title"
            android:textColor="@color/black"
            android:textSize="20sp"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_attendee_name"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_add_attendee_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_attendee_name"
                android:layout_width="match_parent"
                android:hint="@string/hint_add_attendee_name"
                android:layout_height="wrap_content"
                tools:text="@sample/attendees_data.json/attendees/name"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_attendee_last_name"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_attendee_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_attendee_last_name"
                android:layout_width="match_parent"
                android:hint="@string/hint_add_attendee_last_name"
                android:layout_height="wrap_content"
                tools:text="@sample/attendees_data.json/attendees/last_name"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_attendee_about"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_attendee_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_attendee_about"
                android:layout_width="match_parent"
                android:hint="@string/hint_add_attendee_about"
                android:layout_height="wrap_content"
                tools:text="@sample/attendees_data.json/attendees/about"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_save_attendee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnt_save_attendee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
    />

    <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
    />

</androidx.constraintlayout.widget.ConstraintLayout>